--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "add": "^2.0.6",
     "cd": "^0.3.3",
     "yarn": "^1.16.0"
+  },
+  "dependencies": {
+    "fuse.js": "^3.4.4",
+    "moment": "^2.24.0"
   }
 }
